--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TE4BHZ89TL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TE4BHZ89TL');
+</script>
+    <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Gorilla Camping - Explore the best camping gear, tips, and adventures." />
@@ -70,5 +79,15 @@
             });
         });
     </script>
+    <script>
+  document.querySelectorAll('.affiliate-link').forEach(link => {
+    link.addEventListener('click', function() {
+      gtag('event', 'affiliate_click', {
+        'event_category': 'Affiliate',
+        'event_label': this.href
+      });
+    });
+  });
+</script>
 </body>
 </html>
