--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <title>Gorilla Camping - Home</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
     
-    <!-- MailerLite Universal -->
+    
     <script>
         (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
         .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
@@ -26,6 +26,13 @@
         ml('account', '1500893');
     </script>
     <!-- End MailerLite Universal -->
+      <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "rprq55166f");
+</script>
 </head>
 
 <body>
