--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{{ post['title'] }} - GorillaCmapping</title>
+  <title>{{ post.title }} | Gorilla Camping</title>
+<meta name="description" content="{{ post.meta_description }}">
+<link rel="canonical" href="https://gorillacamping.site/blog/{{ post.slug }}">
+<meta property="og:title" content="{{ post.title }}">
+<meta property="og:description" content="{{ post.meta_description }}">
+<meta property="og:url" content="https://gorillacamping.site/blog/{{ post.slug }}">
+<meta property="og:type" content="article">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "{{ post.title }}",
+  "datePublished": "{{ post.created_at.isoformat() }}",
+  "dateModified": "{{ post.updated_at.isoformat() }}",
+  "author": {
+    "@type": "Person",
+    "name": "Gorilla Camping"
+  },
+  "description": "{{ post.meta_description }}",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://gorillacamping.site/blog/{{ post.slug }}"
+  }
+}
+</script>
 </head>
 <body>
   <h1>{{ post['title'] }}</h1>
